--- a/package.json
+++ b/package.json
@@ -13,12 +13,18 @@
     "postinstall": "npx tailwindcss -i ./global.css -o ./node_modules/.cache/nativewind/global.css"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.1.1",
+    "@react-native-community/datetimepicker": "^8.3.0",
     "@react-navigation/native": "^7.0.0",
     "@rn-primitives/avatar": "~1.2.0",
+    "@rn-primitives/dialog": "^1.2.0",
+    "@rn-primitives/label": "^1.2.0",
     "@rn-primitives/portal": "~1.3.0",
     "@rn-primitives/progress": "~1.2.0",
     "@rn-primitives/slot": "~1.2.0",
+    "@rn-primitives/table": "^1.2.0",
     "@rn-primitives/tooltip": "~1.2.0",
+    "@shopify/flash-list": "^1.8.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "expo": "^53.0.9",
@@ -32,7 +38,9 @@
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-hook-form": "^7.57.0",
     "react-native": "0.79.3",
+    "react-native-date-picker": "^5.0.13",
     "react-native-reanimated": "~3.17.5",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "^4.10.0",
@@ -40,7 +48,8 @@
     "react-native-web": "~0.20.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "3.3.5",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.25.63"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
