--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": ".",
+  "name": "pokerapp",
   "main": "index.js",
   "version": "1.0.0",
   "scripts": {
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/datetimepicker": "^8.3.0",
     "@react-navigation/native": "^7.0.0",
     "@rn-primitives/avatar": "~1.2.0",
@@ -25,9 +26,11 @@
     "@rn-primitives/table": "^1.2.0",
     "@rn-primitives/tooltip": "~1.2.0",
     "@shopify/flash-list": "^1.8.2",
+    "@supabase/supabase-js": "^2.50.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "expo": "^53.0.9",
+    "expo-auth-session": "~6.2.0",
     "expo-linking": "~7.1.5",
     "expo-navigation-bar": "~4.2.4",
     "expo-router": "~5.1.0",
@@ -45,6 +48,7 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "^4.10.0",
     "react-native-svg": "15.11.2",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.20.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "3.3.5",
