--- a/app.json
+++ b/app.json
@@ -1,8 +1,19 @@
 {
   "expo": {
-    "name": "pokerapp",
+    "name": "PokerApp",
     "slug": "pokerapp",
-    "scheme": "pokerapp",
+    "scheme": "com.zivcarmi.pokerapp",
+    "android": {
+      "adaptiveIcon": {
+        "foregroundImage": "./assets/images/adaptive-icon.png",
+        "backgroundColor": "#ffffff"
+      },
+      "package": "com.zivcarmi.pokerapp"
+    },
+    "ios": {
+      "supportsTablet": true,
+      "bundleIdentifier": "com.zivcarmi.pokerapp"
+    },
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
@@ -13,25 +24,26 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": ["**/*"],
-    "ios": {
-      "supportsTablet": true
-    },
-    "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      },
-      "package": "com.anonymous"
-    },
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "web": {
       "bundler": "metro",
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": ["expo-router"],
+    "plugins": [
+      "expo-router"
+    ],
     "experiments": {
       "typedRoutes": true
-    }
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "c39464ad-db25-421e-b32e-5b88da64c16f"
+      }
+    },
+    "owner": "ziv-carmi"
   }
 }
