--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "expo": "^53.0.9",
-    "expo-auth-session": "~6.2.0",
     "expo-linking": "~7.1.5",
     "expo-navigation-bar": "~4.2.4",
     "expo-router": "~5.1.0",
@@ -53,7 +52,10 @@
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "3.3.5",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.25.63"
+    "zod": "^3.25.63",
+    "expo-web-browser": "~14.1.6",
+    "expo-auth-session": "~6.2.0",
+    "expo-dev-client": "~5.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
