--- a/package.json
+++ b/package.json
@@ -29,13 +29,16 @@
     "@supabase/supabase-js": "^2.50.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "expo": "^53.0.9",
+    "expo": "^53.0.11",
+    "expo-auth-session": "~6.2.0",
+    "expo-dev-client": "~5.2.0",
     "expo-linking": "~7.1.5",
     "expo-navigation-bar": "~4.2.4",
     "expo-router": "~5.1.0",
     "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
     "expo-system-ui": "~5.0.7",
+    "expo-web-browser": "~14.1.6",
     "lucide-react-native": "^0.511.0",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
@@ -52,10 +55,7 @@
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "3.3.5",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.25.63",
-    "expo-web-browser": "~14.1.6",
-    "expo-auth-session": "~6.2.0",
-    "expo-dev-client": "~5.2.0"
+    "zod": "^3.25.63"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
