--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@rn-primitives/tooltip": "~1.2.0",
     "@shopify/flash-list": "^1.8.2",
     "@supabase/supabase-js": "^2.50.0",
+    "@tanstack/react-query": "^5.81.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "expo": "^53.0.11",
