--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native": "^7.0.0",
     "@rn-primitives/avatar": "~1.2.0",
     "@rn-primitives/dialog": "^1.2.0",
+    "@rn-primitives/dropdown-menu": "^1.2.0",
     "@rn-primitives/label": "^1.2.0",
     "@rn-primitives/portal": "~1.3.0",
     "@rn-primitives/progress": "~1.2.0",
@@ -32,6 +33,7 @@
     "clsx": "^2.1.0",
     "expo": "^53.0.11",
     "expo-auth-session": "~6.2.0",
+    "expo-clipboard": "~7.1.4",
     "expo-dev-client": "~5.2.0",
     "expo-linking": "~7.1.5",
     "expo-navigation-bar": "~4.2.4",
@@ -56,8 +58,7 @@
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "3.3.5",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.25.63",
-    "expo-clipboard": "~7.1.4"
+    "zod": "^3.25.63"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
